<?xml
version="1.0"
encoding="utf-8"?>

<ScrollView
android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
android:orientation="vertical"
android:id="@+id/LinearLayout01"
android:layout_height="fill_parent"
android:padding="5dip"
android:layout_width="fill_parent">



<TextView
android:textSize="25dip"
android:layout_width="wrap_content"
android:id="@+id/TextView01"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginBottom="5dip"
android:text="Person Details"></TextView>


<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView02"
android:layout_height="wrap_content"
android:text="@string/last_name"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView03"
android:textColor="#fff"
android:layout_height="wrap_content"
android:text="-" 
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"></TextView>

<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView04"
android:layout_height="wrap_content"
android:text="@string/first_name"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView05"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
android:text="-"></TextView>

<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView06"
android:layout_height="wrap_content"
android:text="@string/gender"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView07"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
android:text="-"></TextView>



<!-- TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Picture:"></TextView-->
<ImageView
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:visibility="gone"
android:layout_marginBottom="10dip"
android:id="@+id/ImageView01"></ImageView>



<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView08"
android:layout_height="wrap_content"
android:text="@string/status"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView09"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginBottom="10dip"
android:layout_marginLeft="15dip"
android:text="-"></TextView>


<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView10"
android:layout_height="wrap_content"
android:text="@string/age"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView11"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
android:text="-"></TextView>

<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView12"
android:layout_height="wrap_content"
android:text="@string/address"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView13"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
android:text="-"></TextView>

<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView14"
android:layout_height="wrap_content"
android:text="@string/city"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView15"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
android:text="-"></TextView>

<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView16"
android:layout_height="wrap_content"
android:text="@string/country"></TextView>
<TextView
android:textSize="20dip"
android:layout_width="wrap_content"
android:id="@+id/TextView17"
android:textColor="#fff"
android:layout_height="wrap_content"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
android:text="-"></TextView>

<TextView
android:layout_width="wrap_content"
android:id="@+id/TextView18"
android:layout_height="wrap_content"
android:text="@string/description"></TextView>
<TextView android:textSize="20dip" android:layout_width="wrap_content"
	android:id="@+id/TextView19" android:textColor="#fff"
android:layout_marginLeft="15dip"
android:layout_marginBottom="10dip"
	android:layout_height="wrap_content" android:text="-"></TextView>

	
</LinearLayout>
</ScrollView>
