<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
<TextView android:layout_gravity="center"
android:id="@+id/TextView01" android:layout_width="wrap_content" 
android:layout_height="wrap_content" android:text="@string/successfully_added" android:textSize="25dip" android:layout_margin="5dip"></TextView>
<Button android:id="@+id/Button01" 
android:layout_gravity="center"
android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_another" android:layout_margin="10dip" android:onClick="onClickAdd"></Button>
<Button android:layout_gravity="center"
android:id="@+id/Button02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back_to_menu" android:onClick="onClickMenu"></Button>
</LinearLayout>
