<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent"
 android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="10dip">






	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textSize="25dip"
		android:textColor="#fff" android:text="Synchronisation"></TextView>

	<TextView android:id="@+id/TextView05" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sync_help"
		android:layout_marginBottom="20dip" android:layout_marginTop="20dip">

	</TextView>





	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/username"></TextView>
	<EditText android:id="@+id/EditText01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:width="250dip"></EditText>
	<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/password"></TextView>
	<EditText android:width="250dip" android:layout_width="wrap_content" android:password="true"
		android:id="@+id/EditText02" android:layout_height="wrap_content"></EditText>



	<Button android:id="@+id/Button01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/start"
		android:layout_marginTop="10dip" android:onClick="onClickHandler"></Button>
		
		
		
<TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content"
 android:textColor="#fff" android:textStyle="bold" android:text=" -" android:textSize="20dip" android:layout_marginBottom="25dip"></TextView>
</LinearLayout>
  
  
  </ScrollView>
